--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
 	implementation 'org.hibernate.validator:hibernate-validator'
+	implementation 'org.postgresql:postgresql'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
