--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,3 +33,7 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+
