--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "rollup": "4.16.0"
   }
 }
