--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "rollup": "4.16.0",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.0.4",
-    "rollup": "4.16.0"
+    "vite": "^7.0.4"
   }
 }
