--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,22 +1,23 @@
-# Use Node.js LTS with Alpine (lightweight and compatible)
-FROM node:20-alpine AS builder
+# Stage 1: Build
+FROM node:22 as builder
 
 WORKDIR /app
 
-# Copy package files first for better caching
 COPY package*.json ./
+RUN npm install
 
-# Install dependencies (including SWC native bindings)
-RUN npm install --force
-
-# Copy app source
 COPY . .
-
-# Build the app
 RUN npm run build
 
-# Production stage with Nginx
+# Stage 2: Serve with nginx
 FROM nginx:alpine
+
+# Copy built files from builder
 COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Optional: replace default nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
