--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,21 +3,23 @@ FROM node:22 as builder
 
 WORKDIR /app
 
+# Only copy package.json and lock file first
 COPY package*.json ./
-RUN npm install
 
+# Install with clean environment
+RUN npm ci --omit=optional
+
+# Now copy the rest of the code
 COPY . .
+
+# Build Vite
 RUN npm run build
 
-# Stage 2: Serve with nginx
+# Stage 2: Serve with Nginx
 FROM nginx:alpine
 
-# Copy built files from builder
 COPY --from=builder /app/dist /usr/share/nginx/html
-
-# Optional: replace default nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
