--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,25 @@
-# Stage 1: Build
-FROM node:22 as builder
+# Stage 1: Build with Vite
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Only copy package.json and lock file first
+# Copy package files and install
 COPY package*.json ./
+RUN npm install
 
-# Install with clean environment
-RUN npm ci --omit=optional
+# Clean problematic native bindings
+RUN rm -rf node_modules package-lock.json && npm install
 
-# Now copy the rest of the code
+# Copy remaining files
 COPY . .
 
-# Build Vite
+# Build the project
 RUN npm run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
